@@ -11,12 +11,17 @@ public class SkillMapper {
 
   public static SkillResponseDTO toDTO(Skill skill) {
 
-    List<String> synonyms = skill.getSynonyms() != null
-      ? skill.getSynonyms()
-      .stream()
-      .map(SkillSynonym::getSynonym)
-      .collect(Collectors.toList())
-      : List.of();
+    List<String> synonyms = List.of();
+
+    if (skill.getSynonyms() != null) {
+      synonyms = skill.getSynonyms()
+        .stream()
+        .map(SkillSynonym::getSynonym)
+        .filter(s -> s != null && !s.isBlank())
+        .map(String::trim)
+        .distinct()
+        .toList();
+    }
 
     return SkillResponseDTO.builder()
       .id(skill.getId())
